--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-games",
   "private": true,
-  "version": "0.9.0",
+  "version": "0.9.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-loader-spinner": "^6.1.6",
     "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
