--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-games",
   "private": true,
-  "version": "1.5.2",
+  "version": "1.6.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,7 +19,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
-    "react-router-dom": "^6.22.1"
+    "react-router-dom": "^6.22.1",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
